--- a/gateway/src/main/resources/application.yml
+++ b/gateway/src/main/resources/application.yml
@@ -12,10 +12,30 @@ spring:
           uri: lb://userservice #路由目标地址
           predicates: #路由断言判断请求是否符合规则
             - Path=/user/** #路由断言，判断是否以/user开头 ,如果是则符合
+#          filters:   #单个网关路由过滤器
+#            - AddRequestHeader=Truth,xiao gang is freaking awesome!
         - id: order-service
           uri: lb://orderservice
           predicates:
             - Path=/order/**
+      default-filters: #全局网关路由过滤器
+        - AddRequestHeader=Truth,xiao gang is freaking awesome!
+      globalcors: # 全局的跨域处理
+        add-to-simple-url-handler-mapping: true # 解决options请求被拦截问题
+        corsConfigurations:
+          '[/**]':
+            allowedOrigins: # 允许哪些网站的跨域请求
+              - "http://localhost:8090"
+              - "http://www.leyou.com"
+            allowedMethods: # 允许的跨域ajax的请求方式
+              - "GET"
+              - "POST"
+              - "DELETE"
+              - "PUT"
+              - "OPTIONS"
+            allowedHeaders: "*" # 允许在请求中携带的头信息
+            allowCredentials: true # 是否允许携带cookie
+            maxAge: 360000 # 这次跨域检测的有效期
 
 
 
